tests/baselines/reference/templateStringUnterminated4_ES6.errors.txt
templateStringUnterminated4_ES6.ts(1,6): error TS1160: Unterminated template literal.


==== templateStringUnterminated4_ES6.ts (1 errors) ====
    `\\\`
         
!!! error TS1160: Unterminated template literal.